<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheQuiz</string>

    <!-- General Strings-->
    <string name="general_coming_soon_string">Coming Soon</string>
    <string name="general_please_wait_string">Please wait</string>
    <string name="general_hours_string">hours</string>
    <string name="general_done_button">Done</string>
    <string name="general_failed_update">Failed to Update</string>

    <!-- Default Strings-->
    <string name="default_group">New Group</string>
    <string name="default_player">New Player</string>
    <string name="default_set">New Set</string>
    <string name="default_question">New Question</string>

    <!-- Home Screen -->
    <string name="home_settings">Settings</string>
    <string name="home_groups">Groups</string>
    <string name="home_game">Start Game</string>
    <string name="home_info">Info</string>

    <!-- Group List Screen -->
    <string name="empty_group_list">Please add new groups</string>

    <!-- Group Detail Screen -->
    <string name="empty_player_list">Please add new players</string>
    <string name="empty_group_name">Click to add name</string>
    <string name="failed_create_group">Failed to create group</string>

    <!-- Player Detail Screen -->
    <string name="first_name_title">First name</string>
    <string name="last_name_title">Last name</string>
    <string name="department_title">Department</string>

    <!-- Questions List Screen -->
    <string name="empty_sets_list">Please add new question sets</string>

    <!-- Questions Set Screen -->
    <string name="empty_set_name">Click to add a name</string>
    <string name="empty_set_type">Click to add a type</string>
    <string name="empty_question_list">Please add new questions</string>


    <!-- Question Detail Screen -->
    <string name="question_title">Question</string>
    <string name="option_one_title">Option A</string>
    <string name="option_two_title">Option B</string>
    <string name="option_three_title">Option C</string>
    <string name="option_four_title">Option D</string>
    <string name="right_answer_title">Answer</string>
    <string name="second_answer_title">Second Option</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="status_title">Status</string>

    <!-- Question Export Screen -->
    <string name="export_successful">Successfully exported all questions.</string>
    <string name="delete_question_successful">Successfully deleted question</string>
    <string name="remove_question_message">Do you want to remove this question from the list ?</string>
    <string name="question_used">Used</string>
    <string name="question_unused">Unused</string>


    <!-- Game Screen -->
    <string name="game_not_initialized">Game not initialized</string>
    <string name="team_already_added">Team already added</string>
    <string name="team_added">New team added</string>
    <string name="team_removed">Team removed</string>
    <string name="team_not_found">Team not found</string>

    <string name="start_game_button">Create Game</string>
    <string name="remove_group_button">Remove</string>
    <string name="cancel_group_button">Cancel</string>
    <string name="remove_group_message">Do you want to remove *** from the game ?</string>

    <string name="start_button_text">Start</string>
    <string name="choose_answer_first">Please select and answer first</string>
    <string name="round_completed">Round completed</string>
    <string name="next_question">Next Question</string>

    <string name="right_answer_selected">Congratulation, your team moves to next level</string>
    <string name="wrong_answer_selected">I am sorry. It is a wrong answer</string>

    <string name="round_text">Round ***</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_status">Create new game to play again</string>
    <string name="loading_questions">Initializing game</string>
    <string name="click_to_start">Click to Start</string>
    <string name="special_round">Knock Out Round</string>
    <string name="winner_team">*** won the game</string>
    <string name="has_winner">Winner</string>


    <!-- Error Messages -->
    <string name="no_groups">Please create some groups first</string>
    <string name="problem_loading_question">Problem loading question.</string>
    <string name="not_enough_questions_short">WARNING</string>
    <string name="not_enough_questions_long">Insufficient questions for round ***</string>
    <string name="fail_export">Failed to export the file. Please check your file content.</string>
    <string name="delete_question_fail">Failed to delete question</string>
    <string name="no_more_special_question">IT IS A TIE</string>

</resources>
