<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/rounded_white_border">

    <TextView
            style="@style/player_list_text"
            android:id="@+id/remove_question_message"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_question_message"/>

    <LinearLayout
            android:layout_below="@+id/remove_question_message"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/cancel_group_button"
                android:id="@+id/cancel_question_button"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:layout_weight="1.0"
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/remove_group_button"
                android:id="@+id/remove_question_button"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:layout_weight="1.0"
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>