<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/app_background">

    <RelativeLayout
            android:id="@+id/group_info_layout"
            android:layout_width="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_height="150dp">

        <ImageView
                android:id="@+id/group_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:src="@drawable/group_wood"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:onClick="onChangePhotoClicked"
                android:background="@drawable/image_background"/>

        <EditText
                style="@style/group_name_text"
                android:id="@+id/group_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/group_photo"
                android:text="@string/empty_group_name"
                android:clickable="true"
                android:onClick="onChangeNameClicked"
                android:textIsSelectable="false"/>


    </RelativeLayout>


    <ImageView
            android:id="@+id/adding_group_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/add_button"
            android:layout_below="@+id/group_info_layout"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:onClick="onAddPlayerClicked"
            android:background="@drawable/image_background"/>


    <TextView
            android:layout_below="@id/adding_group_button"
            style="@style/empty_list_text"
            android:id="@+id/empty_list_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_player_list"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:visibility="gone"/>

    <ListView
            android:id="@android:id/list"
            android:layout_margin="20dp"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@color/transparent"
            android:dividerHeight="10dp"
            android:layout_below="@+id/empty_list_text"
            android:layout_above="@+id/group_done_button"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/general_done_button"
            android:id="@+id/group_done_button"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentBottom="true"
            android:onClick="onGroupDoneClicked"
            android:clickable="true"/>


</RelativeLayout>